--- a/index3.html
+++ b/index3.html
@@ -79,6 +79,34 @@
     </div>
   </section>
 
+   <!-- Skills Section -->
+
+   <section class="py-10 px-4 max-w-6xl mx-auto">
+    <h2 class="text-3xl font-bold mb-6 text-center">My Skills</h2>
+    <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3">
+      
+      <div class="rounded-2xl p-6 shadow-md font-semibold text-center text-lg bg-orange-100 text-orange-700 transition-transform duration-300 hover:scale-105 hover:shadow-lg">
+        HTML
+      </div>
+      <div class="rounded-2xl p-6 shadow-md font-semibold text-center text-lg bg-blue-100 text-blue-700 transition-transform duration-300 hover:scale-105 hover:shadow-lg">
+        CSS
+      </div>
+      <div class="rounded-2xl p-6 shadow-md font-semibold text-center text-lg bg-yellow-100 text-yellow-800 transition-transform duration-300 hover:scale-105 hover:shadow-lg">
+        JavaScript
+      </div>
+      <div class="rounded-2xl p-6 shadow-md font-semibold text-center text-lg bg-green-100 text-green-700 transition-transform duration-300 hover:scale-105 hover:shadow-lg">
+        Node.js
+      </div>
+      <div class="rounded-2xl p-6 shadow-md font-semibold text-center text-lg bg-cyan-100 text-cyan-700 transition-transform duration-300 hover:scale-105 hover:shadow-lg">
+        Tailwind CSS
+      </div>
+      <div class="rounded-2xl p-6 shadow-md font-semibold text-center text-lg bg-emerald-100 text-emerald-700 transition-transform duration-300 hover:scale-105 hover:shadow-lg">
+        MongoDB
+      </div>
+  
+    </div>
+  </section>
+
   <!-- Projects Section -->
   <section id="projects" class="py-20 bg-gray-900">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -107,6 +135,9 @@
       </div>
     </div>
   </section>
+
+
+  
 
   <!-- Education Section -->
   <section id="education" class="py-20 bg-gray-800">
